--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "dotenv": "^16.4.0"
   }
 }
