--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "linegpt-bot",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "axios": "^1.5.0",
-    "express": "^4.18.2",
-    "dotenv": "^16.4.0"
+    "express": "^4.18.2"
   }
 }
