--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node index.js"
   },
-  "dependencies": {
-    "axios": "^1.5.0",
-    "express": "^4.18.2"
-  }
+ "dependencies": {
+  "axios": "^1.5.0",
+  "express": "^4.18.2",
+  "@google/generative-ai": "^0.5.0"
 }
