--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "linegpt-bot",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
@@ -8,6 +9,6 @@
   "dependencies": {
     "axios": "^1.5.0",
     "express": "^4.18.2",
-    "@google/generative-ai": "^0.5.0"
+    "@google/generative-ai": "^0.7.0"
   }
 }
