--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start": "node index.js"
   },
+  "engines": {
+    "node": ">=18.x"
+  },
   "dependencies": {
     "axios": "^1.5.0",
     "express": "^4.18.2",
