--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "node": ">=18.x"
   },
   "dependencies": {
-    "axios": "^1.5.0",
-    "express": "^4.18.2",
-    "@google/generative-ai": "^0.5.0"
-  }
+  "axios": "^1.5.0",
+  "express": "^4.18.2",
+  "@google/generative-ai": "^0.5.0",
+  "dotenv": "^16.3.1"
+}
 }
